--- a/pod.yaml
+++ b/pod.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginxwebserver
+  name: webserver
   labels:
-    name: nginxwebserver
+    name: webserver
 spec:
   containers:
   - name: "webserver"
